# seesaw-rs

./: .gitignore  ADAPTER_ECOSYSTEM_PLAN.md  CLAUDE.md  Cargo.toml  README.md  RESTRUCTURE_PLAN.md
crates/seesaw/: Cargo.toml
crates/seesaw-job-postgres/: Cargo.toml  README.md
crates/seesaw-job-postgres/src/: lib.rs
crates/seesaw-outbox/: Cargo.toml
crates/seesaw-outbox/src/: lib.rs
crates/seesaw-persistence/: Cargo.toml
crates/seesaw-persistence/src/: lib.rs
crates/seesaw-testing/: Cargo.toml  README.md
crates/seesaw-testing/src/: lib.rs
crates/seesaw/src/: audit.rs  codesmell_tests.rs  core.rs  effect_impl.rs  engine.rs  lib.rs  request.rs  testing.rs
examples/: EXAMPLES_PHILOSOPHY.md  README.md  SUMMARY.md
examples/ai-summarizer/: Cargo.toml
examples/ai-summarizer/src/: main.rs
examples/http-fetcher/: Cargo.toml
examples/http-fetcher/src/: main.rs
src/: command_macro.rs  core.rs  dispatch.rs  lib.rs  serde_auto_tests.rs
