[workspace]
members = [
    "crates/seesaw",
    "crates/seesaw-job-postgres",
    "crates/seesaw-outbox",
    "crates/seesaw-persistence",
    "crates/seesaw-testing",
    "examples/http-fetcher",
    "examples/ai-summarizer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Crispin Read <crispin@crispinread.com>"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
erased-serde = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15"
thiserror = "2.0"
tokio = { version = "1.49", features = ["sync", "rt", "time", "macros"] }
tracing = "0.1"
uuid = { version = "1.20", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Dev dependencies
fastrand = "2.3"
