[package]
name = "seesaw-job-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PostgreSQL implementation of seesaw job queue"

[dependencies]
seesaw = { path = "../seesaw" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "macros"] }
uuid.workspace = true
