[package]
name = "seesaw-outbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transactional outbox pattern for Seesaw framework"

[dependencies]
seesaw-core = { version = "0.1", path = "../seesaw" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
