[package]
name = "seesaw-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Machine state persistence for Seesaw framework"

[dependencies]
seesaw-core = { path = "../seesaw" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
uuid.workspace = true
