[package]
name = "seesaw-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Testing utilities for Seesaw framework"

[dependencies]
seesaw-core = { path = "../seesaw" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
