[package]
name = "seesaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A deterministic, event-driven coordination layer where machines decide, effects execute, and transactions define authority"

[features]
default = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
erased-serde.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
fastrand.workspace = true
seesaw-outbox = { version = "0.1", path = "../seesaw-outbox" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
